add visual effects

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
       <!-- show result section -->
       <div class="weather">
+        <div class="weather-data">
         <!-- <span class="img-icon"> <i class="fa-solid fa-cloud-sun-rain" id="weather-icon"></i></span> -->
         <img src="./Images/clear.png" id="weather-icon" class="img-icon" />
         <h1 class="temp">22°c</h1>
@@ -54,6 +55,7 @@
         </div>
       </div>
     </div>
+</div>
     <script src="app.js"></script>
   </body>
 </html>
